tests/tooling/fixtures/native/execution/positive/do_while_break_continue.objc3
module DoWhileBreakContinueExec;

fn main() -> i32 {
  let i = 0;
  let sum = 0;
  do {
    i = i + 1;
    if (i == 2) {
      continue;
    }
    if (i == 7) {
      break;
    }
    sum = sum + i;
  } while (i < 10);
  return sum;
}

