tests/tooling/fixtures/native/execution/negative/objc_literal_aliases_global_divide_by_zero.objc3
module ObjcLiteralAliasesGlobalDivideByZero;

let value = NULL / 0;

fn main() -> i32 {
  return value;
}
